deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameshop-deployment
spec:
  replicas: 1 # Поки що одну, щоб не перевантажувати пам'ять
  selector:
    matchLabels:
      app: gameshop
  template:
    metadata:
      labels:
        app: gameshop
    spec:
      containers:
      - name: gameshop-container
        image: dollar329/shop-app:v1 # Твій образ з Docker Hub
        imagePullPolicy: Always
        ports:
        - containerPort: 80
