service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameshop-service
spec:
  selector:
    app: gameshop
  ports:
    - protocol: TCP
      port: 80       # Порт всередині K8s
      targetPort: 80 # Порт у контейнері
      nodePort: 30007 # Порт, на якому сайт буде доступний ззовні (192.168.0.165:30007)
  type: NodePort
